<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="id.my.arieftb.meowvie.presentation.feature.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/actionHomeToDetail"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"/>

        <action
            android:id="@+id/actionHomeToSection"
            app:destination="@id/sectionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"/>
    </fragment>
    <fragment
        android:id="@+id/exploreFragment"
        android:name="id.my.arieftb.meowvie.presentation.feature.explore.ExploreFragment"
        android:label="@string/menu_explore" >
        <action
            android:id="@+id/actionExploreToDetail"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/favoriteFragment"/>
    </fragment>
    <fragment
        app:moduleName="favorite"
        android:id="@+id/favoriteFragment"
        android:name="id.my.arieftb.meowvie.favorite.FavoriteFragment"
        android:label="@string/menu_watchlist">
        <action
            android:id="@+id/actionFavoriteToDetail"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/favoriteFragment"/>
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="id.my.arieftb.meowvie.presentation.feature.account.AccountFragment"
        android:label="@string/menu_account" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="id.my.arieftb.meowvie.presentation.feature.detail.DetailFragment"
        android:label="{title}">
        <argument
            android:name="id"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="type"
            android:defaultValue="MOVIE"
            app:argType="id.my.arieftb.core.domain.constant.ContentType"/>
        <argument
            android:name="title"
            android:defaultValue="MeowVie"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/sectionFragment"
        android:name="id.my.arieftb.meowvie.presentation.feature.section.SectionFragment"
        android:label="{title}">
        <argument
            android:name="type"
            android:defaultValue="NEW_MOVIE"
            app:argType="id.my.arieftb.core.domain.constant.SectionType"/>

        <action
            android:id="@+id/actionSectionToDetail"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/sectionFragment"/>
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Section" />
    </fragment>
</navigation>