<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    TODO : Add Fragment Container If Navigation Component Ready-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentMainContainer"
        android:name="androidx.navigation.dynamicfeatures.fragment.DynamicNavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation_main_graph"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationMain"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MeowVie.BottomNavigationView"
        app:menu="@menu/menu_main_bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>